--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,10 +20,10 @@ jobs:
       run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
 
     - name: Build Docker image
-      run: docker buildx build --platform linux/amd64,linux/arm64 -t ${{ secrets.DOCKER_USERNAME }}/comentarios:latest .
+      run: docker buildx build --platform linux/amd64,linux/arm64 -t "${{ secrets.DOCKER_USERNAME }}"/comentarios:latest .
 
     - name: Push Docker image
-      run: docker push ${{ secrets.DOCKER_USERNAME }}/comentarios:latest
+      run: docker push "${{ secrets.DOCKER_USERNAME }}"/comentarios:latest
 
     - name: Deploy to EC2
       uses: appleboy/ssh-action@master
@@ -35,4 +35,4 @@ jobs:
           docker stop comentarios || true
           docker rm comentarios || true
           docker pull ${{ secrets.DOCKER_USERNAME }}/comentarios:latest
-          docker run -d --name comentarios -p 5000:5000 ${{ secrets.DOCKER_USERNAME }}/comentarios:latest
+          docker run -d --name comentarios -p 5000:5000 "${{ secrets.DOCKER_USERNAME }}"/comentarios:latest
