--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,10 +16,10 @@ jobs:
       run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
 
     - name: Build Docker image
-      run: docker build -t ${{ secrets.DOCKER_USERNAME }}/comentarios:latest .
+      run: docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/comentarios:latest .
 
     - name: Push Docker image
-      run: docker push ${{ secrets.DOCKER_USERNAME }}/comentarios:latest
+      run: docker push ${{ secrets.DOCKERHUB_USERNAME }}/comentarios:latest
 
   deploy:
     runs-on: ubuntu-latest
