--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,13 +1,14 @@
-name: Docker Build and Push
+name: Docker Build and Deploy
 
 on:
   push:
     branches:
-      - main  # Defina aqui os ramos que deseja construir
+      - main  # Defina aqui os ramos que deseja construir e implantar
 
 jobs:
   build:
     runs-on: ubuntu-latest
+
     steps:
     - name: Checkout repository
       uses: actions/checkout@v2
@@ -34,11 +35,8 @@ jobs:
     - name: Login to Docker Hub
       run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
 
-    - name: Build Docker image
-      run: docker buildx build --platform linux/amd64,linux/arm64 -t davicarneiro/comentarios:latest .
-
-    - name: Push Docker image
-      run: docker push davicarneiro/comentarios:latest
+    - name: Pull Docker image
+      run: docker pull ${{ secrets.DOCKERHUB_USERNAME }}/comentarios:latest
 
     - name: Deploy to EC2
       uses: appleboy/ssh-action@master
@@ -49,5 +47,4 @@ jobs:
         script: |
           docker stop comentarios || true
           docker rm comentarios || true
-          docker pull davicarneiro/comentarios:latest
-          docker run -d --name comentarios -p 5000:5000 davicarneiro/comentarios:latest
+          docker run -d --name comentarios -p 5000:5000 ${{ secrets.DOCKERHUB_USERNAME }}/comentarios:latest
