--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -47,4 +47,4 @@ jobs:
         script: |
           docker stop comentarios || true
           docker rm comentarios || true
-          docker run -d --name comentarios -p 5000:5000 ${{ secrets.DOCKERHUB_USERNAME }}/comentarios:latest
+          docker run -td -u root --name comentarios --restart always -p 5000:5000 --net=host ${{ secrets.DOCKERHUB_USERNAME }}/comentarios:latest
