--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,17 +28,17 @@ jobs:
     - name: Construção da imagem Docker worker
       uses: docker/build-push-action@v5.0.0
       with: 
-        context: ./src
-        file: ./src/Dockerfile
+        context: ./
+        file: ./Dockerfile
         push: true
         tags: |
-          davicarneiro/application-web:${{github.run_number}}
-          davicarneiro/application-web:latest
+          davicarneiro/comentarios-api:${{github.run_number}}
+          davicarneiro/comentarios-api:latest
           
     - name: Run Trivy vulnerability scanner
       uses: aquasecurity/trivy-action@0.16.1
       with:
-        image-ref: davicarneiro/application-web:${{github.run_number}}
+        image-ref: davicarneiro/comentarios-api:${{github.run_number}}
         format: 'sarif'
         output: 'trivy-results.sarif'
         exit-code: 0
